vegansearch/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;

    font-family: 'Roboto', Arial, sans-serif;
}

:root {
    --header-color: #285714;
    --wood-texture: url("/wood_texture.jpg");
}

/* Align everything in <main> top-to-bottom */
main {
    display: flex;
    flex-direction: column;
}

/* Default button styling */
button {
    padding: 20px;
    border: none;
    cursor: pointer;
}

/* Styling for all header text */
.heading {
    font-size: min(100px, 8vw);
}

header {
    height: min(70px, 15vw);
    width: 100%;
    padding: 0 20px;
    /* Fix the header to the top of the screen,
       and position it in front of everything. */
    position: fixed;
    z-index: 999;

    display: flex;
    justify-content: space-between;
    align-items: center;

    background-color: var(--header-color);
    color: white;

    #header-text {
        font-size: min(30px, 7vw);
    }

    #header-menu-icon {
        height: min(50px, 12vw)
    }
}

#main-section {
    #main-background {
        object-fit: cover;
        width: 100%;
        height: min(100vw, 600px);

        /* Position behind everything. */
        position: absolute;
        z-index: -999;

        filter: brightness(0.5);
    }

    #main-text {
        height: min(100vw, 600px);  /* Same height as image */

        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 2vw;

        h2 {
            text-align: center;
            color: white;
        }

        button {
            font-size: min(5vw, 40px);
            padding: min(3vw, 30px) min(6vw, 60px);
            border-radius: min(3vw, 30px);
            background-color: #459721;
            color: white;
        }
    }
}

#what-is-vegansearch {
    height: 2000px;
    background: var(--wood-texture) 60vw / 60vw;

    div {
        height: 100%;
        backdrop-filter: contrast(0.6) brightness(1.2);
    }

    h1 {
        padding: 20px;
        background-color: #8b5401;
        color: white;
    }
}

